[package]
name = "kvstore"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["net", "macros", "rt-multi-thread"] }
prost = "0.8"
dashmap = "4"
tracing = "0.1"
tracing-subscriber = "0.2"

[build-dependencies]
prost-build = "0.8"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
