[package]
name = "web2image"
version = "0.1.0"
authors = ["Gang Yin <yin_gang@hotmai.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = "0.9"
qrcode = "0.12"
image = "0.23"
clap = "3.0.0-beta.4"
anyhow = "1"
url = "2.2"